--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3480,12 +3480,12 @@
   "static.supplyPlan.negativeAdjustmentFEFO":"Shortest shelf life (- adj)",
   "static.ticket.manageTickets":"Manage my tickets",
   "static.dashboard.localTooltip":"If checked, only downloaded versions will appear in the dropdown. If unchecked, only server versions will appear in the dropdown.",
-  "static.dashboard.actionTooltip":"",
+  "static.dashboard.actionTooltip":"Click on trashcan icon to delete local program from QAT",
   "static.dashboard.programTooltip":"",
   "static.dashboard.activePUTooltip":"",
-  "static.dashboard.stockoutTooltip":"",
-  "static.dashboard.expiryTooltip":"",
-  "static.dashboard.qatProblemTooltip":"",
+  "static.dashboard.stockoutTooltip":"Red value indicates products with at least one month of stockout in the next 18 months. Blue value indicates products with no stockouts in the next 18",
+  "static.dashboard.expiryTooltip":"Total cost of projected expiries in the next 18 months",
+  "static.dashboard.qatProblemTooltip":"Number of “open” problems in the QAT Problem List. Click on the cell to be redirected to the QAT Problem List",
   "static.dashboard.lastUpdatedDateTooltip":"",
   "static.dashboard.reviewStatusTooltip":"Status and date are based on the latest final version uploaded to the server",
   "static.forecast.compareAndSelectRangeInfo":"Between the highest and lowest consumption forecast",
