--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3474,5 +3474,7 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.extrapolation.optimiseTESAndARIMASuccess": "Optimize TES & ARIMA done successfully",
+  "static.extrapolation.missingTESAndARIMASuccess": "Missing Extrapolation for TES & ARIMA done successfully"
 }
