--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3483,9 +3483,9 @@
   "static.validated.restrictionNoOfMonthsInFutureForTopDashboard": "Please enter No of months in future for top dashboard",
   "static.validated.restrictionNoOfMonthsInPastForBottomDashboard": "Please enter No of months in past for bottom dashboard",
   "static.ticket.manageTickets":"Manage my tickets",
-  "static.dashboard.localTooltip":"If checked, only downloaded versions will appear in the dropdown. If unchecked, only server versions will appear in the dropdown.",
+  "static.dashboard.localTooltip":"If checked only downloaded versions will appear in the dropdown. If unchecked, only server versions (latest final or draft) will appear in the dropdown",
   "static.dashboard.actionTooltip":"Click on trashcan icon to delete local program from QAT",
-  "static.dashboard.programTooltip":"",
+  "static.dashboard.programTooltip":"Asterisk (*) indicates final and approved version",
   "static.dashboard.activePUTooltip":"",
   "static.dashboard.stockoutTooltip":"Red value indicates products with at least one month of stockout in the next 18 months. Blue value indicates products with no stockouts in the next 18 months",
   "static.dashboard.expiryTooltip":"Total cost of projected expiries in the next 18 months",
