--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3432,5 +3432,9 @@
   "static.realm.noOfMonthsInFutureForTopDashboard":"No of months in future for top dashboard",
   "static.realm.noOfMonthsInPastForBottomDashboard":"No of months in past for bottom dashboard",
   "static.validated.restrictionNoOfMonthsInFutureForTopDashboard":"Please enter No of months in future for top dashboard",
-  "static.validated.restrictionNoOfMonthsInPastForBottomDashboard":"Please enter No of months in past for bottom dashboard"
+  "static.validated.restrictionNoOfMonthsInPastForBottomDashboard":"Please enter No of months in past for bottom dashboard",
+  "static.validated.restrictionNoOfMonthsInPastForTopDashboard":"Please enter No of months in past for top dashboard",
+  "static.validated.restrictionNoOfMonthsInFutureForBottomDashboard":"Please enter No of months in future for bottom dashboard",
+  "static.realm.noOfMonthsInPastForTopDashboard":"No of months in past for top dashboard",
+  "static.realm.noOfMonthsInFutureForBottomDashboard":"No of months in future for bottom dashboard"
 }
