--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3501,9 +3501,9 @@
   "static.dashboard.actionTooltip":"Click on trashcan icon to delete local program from QAT",
   "static.dashboard.programTooltip":"Asterisk (*) indicates final and approved version",
   "static.dashboard.activePUTooltip":"",
-  "static.dashboard.stockoutTooltip":"Red value indicates products with at least one month of stockout in the next 18 months. Blue value indicates products with no stockouts in the next 18 months",
+  "static.dashboard.stockoutTooltip":"Red value indicates planning units with at least one month of stockout in the next 18 months. Blue value indicates planning units with no stockouts in the next 18 months",
   "static.dashboard.expiryTooltip":"Total cost of projected expiries in the next 18 months",
-  "static.dashboard.qatProblemTooltip":"Number of “open” problems in the QAT Problem List. Click on the cell to be redirected to the QAT Problem List",
+  "static.dashboard.qatProblemTooltip":"Number of “open” problems in the QAT Problem List. For downloaded programs, click on the cell to be redirected to the QAT Problem List.",
   "static.dashboard.uploadedDateTooltip":"The date this version (draft or final) was uploaded to the server",
   "static.dashboard.reviewStatusTooltip":"Status and date are based on the latest final version uploaded to the server",
   "static.forecast.compareAndSelectRangeInfo":"Between the highest and lowest consumption forecast",
