--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3491,5 +3491,5 @@
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
   "static.pipeline.pipelineConvertorLinux": "Linux.",
-  "static.program.treeSync": "Program sync"
+  "static.program.treeSync": "Tree sync"
 }
