--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3436,5 +3436,6 @@
   "static.validated.restrictionNoOfMonthsInPastForTopDashboard":"Please enter No of months in past for top dashboard",
   "static.validated.restrictionNoOfMonthsInFutureForBottomDashboard":"Please enter No of months in future for bottom dashboard",
   "static.realm.noOfMonthsInPastForTopDashboard":"No of months in past for top dashboard",
-  "static.realm.noOfMonthsInFutureForBottomDashboard":"No of months in future for bottom dashboard"
+  "static.realm.noOfMonthsInFutureForBottomDashboard":"No of months in future for bottom dashboard",
+  "static.realm.settingChangeWarning":"One of the dashboard settings has been updated. In order for this change to reflect, please re-download or upload the program."
 }
