--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -485,7 +485,7 @@
   "static.extrapolation.UseFilters": "Utiliser les filtres en haut de cet écran pour sélectionner l'unité de planification et la région à extrapoler.",
   "static.ManageTree.BuildTree": "Gestion de l'arbre de prévision - Construire des arbres de prévision ",
   "static.login.loginOnline": "En ligne",
-  "static.versionSettings.confirmUpdate": "Remarque : si vous avez modifié la période de prévision, vous devrez mettre à jour un nœud par scénario pour chaque arbre pour que les prévisions d`arbre s`étendent correctement.",
+  "static.versionSettings.confirmUpdate": "Remarque : si vous avez modifié la période de prévision, vous serez redirigé vers les calculs de prévision des arbres.",
   "static.dataentry.conversionFactorTooltip": "Créé par l`utilisateur ou généré automatiquement dans l`écran Unité de reporting alternative. `*` multipliera et `/` divisera la quantité commandée (ARU) par le facteur de conversion",
   "static.report.problemTransDetails": "Détails de la transaction problématique",
   "static.supplyPlan.addNewInventory": "Ajouter des nouvelles données d`inventaire",
@@ -645,6 +645,7 @@
   "static.shipmentStatus.shipmentStatusName": "Nom de l`état de l`envoi",
   "static.dataentry.dataEnteredInTableEx": "par exemple. Si j'entre 1 000 unités, cela sera converti en",
   "static.extrapolation.arimaLower": "Arima (Limite de confiance inférieure)",
+  "static.program.treeSync": "Synchronisation des arbres",
   "static.tree.hidePlanningUnit": "Masquer l`unité de planification",
   "static.stockStatus.consensusConsumption": "Consensus de consommation",
   "static.procurementAgentPlanningUnit.unitPerPalletEuro1": "Unités par palette EURO 1",
