--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -485,7 +485,7 @@
   "static.extrapolation.UseFilters": "Use os filtros na parte superior desta tela para selecionar a unidade de planejamento e a região para extrapolar.",
   "static.ManageTree.BuildTree": "Gerenciar Árvore de previsão - Construir Árvores de previsão",
   "static.login.loginOnline": "Conectadas",
-  "static.versionSettings.confirmUpdate": "Observação: se você alterou o período de previsão, precisará atualizar um nó por cada cenário para cada árvore para que as previsões de árvore sejam estendidas adequadamente.",
+  "static.versionSettings.confirmUpdate": "Observação: se você alterar o período de previsão, será redirecionado para os cálculos de previsão em árvore.",
   "static.dataentry.conversionFactorTooltip": "Criado pelo usuário ou gerado automaticamente na tela Unidade de relatório alternativa. `*` irá multiplicar e `/` irá dividir a Quantidade do Pedido (ARU) pelo Fator de Conversão",
   "static.report.problemTransDetails": "Detalhes do problema de transação",
   "static.supplyPlan.addNewInventory": "Adicionar nova contagem de stock",
@@ -645,6 +645,7 @@
   "static.shipmentStatus.shipmentStatusName": "Nome do status do embarque",
   "static.dataentry.dataEnteredInTableEx": "por exemplo. Se eu inserir 1,000 unidades, isso será convertido em",
   "static.extrapolation.arimaLower": "ARIMA (Limite de Confiança Inferior)",
+  "static.program.treeSync": "Sincronização de árvore",
   "static.tree.hidePlanningUnit": "Ocultar Unidade de Planejamento",
   "static.stockStatus.consensusConsumption": "Consenso de Consumo",
   "static.procurementAgentPlanningUnit.unitPerPalletEuro1": "Unidades por palete EURO 1",
@@ -3441,6 +3442,7 @@
   "static.organisationHead.organisation": "Organização",
   "static.dimension.dimension": "Dimensão",
   "static.productCategory.success": "Categoria da unidade de planeamento actualizada com sucesso",
+  "static.modelingCalculator.targetBeyondForecast": "Você forneceu metas além do período de previsão. O QAT calculará a modelagem de acordo com suas entradas, mas observe que a exibição (árvore de construção, gráfico de nós, tabela de dados de exibição de nós) é limitada pelo período de previsão. Se desejar ver mais meses, estenda seu período de previsão em Gerenciamento de programas > Configurações de versão.",
   "static.QATForecastImport.OldestForecasted": "consumo previsto mais antigo que você pode importar é 6 meses antes do mês atual.",
   "static.tree.decimalValidation10&2": "Insira um número válido com no máximo 3 dígitos antes do decimal e no máximo 4 dígitos após o decimal.",
   "static.supplyPlan.inventoryType": "Tipo de inventário",
