--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3492,5 +3492,6 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.budgetReport.noBudgetNote":"No budgets found for select report period, program(s), and funding source(s). Note that if the start or end date of a budget falls outside of the selected report period, the budget will not be shown. Program Admins can add or edit a budget in Program Management > Budget."
 }
