--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3527,5 +3527,32 @@
   "static.dashboard.actualConsumptionTooltip": "Counts the number of PUs that either have missing recent actual consumption data (within the last 3 months), or a gap in actual consumption data (within the last 6 months)",
   "static.dashboard.shipmentsTooltip": "Counts the number of PUs that have shipments with receive dates in the past, or shipments that should have been “submitted” based on program lead times",
   "static.realm.settingChangeWarning":"One of the dashboard settings has been updated. In order for this change to reflect, please re-download or upload the program.",
-  "static.budgetReport.noBudgetNote":"No budgets found for select report period, program(s), and funding source(s). Note that if the start or end date of a budget falls outside of the selected report period, the budget will not be shown. Program Admins can add or edit a budget in Program Management > Budget."
+  "static.budgetReport.noBudgetNote":"No budgets found for select report period, program(s), and funding source(s). Note that if the start or end date of a budget falls outside of the selected report period, the budget will not be shown. Program Admins can add or edit a budget in Program Management > Budget.",
+  "static.common.averagePer": "Average %",
+  "static.dashboard.aboveThreshold": "Calculated Forecast Error is above the Forecast Error Threshold",
+  "static.dashboard.noOfShipments": "# of Shipments",
+  "static.dashboard.noOfMonths": "# of Months",
+  "static.dashboard.supplyPlanPrograms": "Supply Planning Programs",
+  "static.dashboard.forecastingPrograms": "Forecasting Programs",
+  "static.dashboard.accessiblePrograms": "Accessible Programs",
+  "static.dashboard.downloadedPrograms": "Downloaded Programs",
+  "static.dashboard.erpLinkedShipments": "ERP Linking",
+  "static.dashboard.activePlanningUnits": "Active Planning Units",
+  "static.dashboard.stockoutPUs": "Planning Units With Stockouts",
+  "static.dashboard.totalExpiriesCost": "Total Cost of Expiries",
+  "static.dashboard.openQATProblems": "Open QAT Problems",
+  "static.dashboard.uploadedDate": "Uploaded Date",
+  "static.dashboard.reviewStatus": "Review Status",
+  "static.dashboard.stockedoutPlanningUnits": "Stocked out Planning Units",
+  "static.dashboard.totalShipments": "Total value of Shipments",
+  "static.dashboard.shipmentsTBD": "# of Shipments with funding TBD",
+  "static.dashboard.dataQuality": "Data Quality",
+  "static.dashboard.totalExpiries": "Total value of Expiries",
+  "static.dashboard.myAccess": "My Access",
+  "static.dashboard.downloadedSP": "Downloaded Supply Plans",
+  "static.dashboard.accessSP": "Supply Plans I can Access",
+  "static.dashboard.erpLinkingRealm": "Linked Shipments (Realm)",
+  "static.dashboard.erpLinkingDownloaded": "Linked Shipments (Downloaded)",
+  "static.dashboard.overview": "Overview",
+  "static.dashboard.programSpotlight": "Program Spotlight"
 }
