--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3550,7 +3550,7 @@
   "static.dashboard.totalExpiries": "Total value of Expiries",
   "static.dashboard.myAccess": "My Access",
   "static.dashboard.downloadedSP": "Downloaded Supply Plans",
-  "static.dashboard.accessSP": "Supply Plans I can Access",
+  "static.dashboard.accessSP": "Supply Plans I Can Access",
   "static.dashboard.erpLinkingRealm": "Linked Shipments (Realm)",
   "static.dashboard.erpLinkingDownloaded": "Linked Shipments (Downloaded)",
   "static.dashboard.overview": "Overview",
