--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3493,14 +3493,11 @@
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
   "static.pipeline.pipelineConvertorLinux": "Linux.",
-<<<<<<< HEAD
   "static.budgetReport.noBudgetNote":"No budgets found for select report period, program(s), and funding source(s). Note that if the start or end date of a budget falls outside of the selected report period, the budget will not be shown. Program Admins can add or edit a budget in Program Management > Budget.",
   "static.versionSettings.updateForecastTree":"Updating Forecast Trees",
   "static.versionSettings.noteInTreeSync":"We are automatically updating the forecast trees for your selected program and version based on the new forecast period. This may take a moment.",
   "static.versionSettings.noteInTreeSyncPart2":"Once the process is complete, no further action is required. Please wait while the system updates the data.",
-  "static.versionSettings.noteInTreeSyncPart3":"Thank you for your patience!"
-}
-=======
+  "static.versionSettings.noteInTreeSyncPart3":"Thank you for your patience!",
   "static.realm.noOfMonthsInFutureForTopDashboard":"No of months in future for top dashboard",
   "static.realm.noOfMonthsInPastForBottomDashboard":"No of months in past for bottom dashboard",
   "static.validated.restrictionNoOfMonthsInFutureForTopDashboard":"Please enter No of months in future for top dashboard",
@@ -3514,4 +3511,3 @@
   "static.realm.noOfMonthsInFutureForBottomDashboard":"No of months in future for bottom dashboard",
   "static.realm.settingChangeWarning":"One of the dashboard settings has been updated. In order for this change to reflect, please re-download or upload the program."
 }
->>>>>>> QAT-469
