--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3557,5 +3557,7 @@
   "static.currency.conversionrateusd": "Conversion rate to 1 USD",
   "static.logout.confirmLogout": "Are you sure you want to log out?",
   "static.common.node": "Node",
-  "static.pipeline.pipelineConvertorLinux": "Linux."
+  "static.pipeline.pipelineConvertorLinux": "Linux.",
+  "static.tree.allInFirstMonth":"All in the First Month",
+  "static.tree.monthByMonth":"Month-by-Month"
 }
